<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Settings"
    tools:showIn="@layout/activity_settings">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/microelectronics"
        android:scaleType="centerCrop"
        android:foreground="@color/colorPrimaryTransparent"/>

    <TextView
        android:id="@+id/label_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/notifications"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@android:color/white"/>

    <ImageButton
        android:id="@+id/button_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_notifications"
        app:layout_constraintBottom_toBottomOf="@id/label_notifications"
        android:src="@drawable/ic_arrow_up"
        android:background="@android:color/transparent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toRightOf="@id/label_notifications"
        app:layout_constraintRight_toLeftOf="@id/button_notifications"
        app:layout_constraintTop_toTopOf="@id/label_notifications"
        app:layout_constraintBottom_toBottomOf="@id/label_notifications"
        android:background="@android:color/white"/>

    <TextView
        android:id="@+id/label_notifications_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_notifications"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/notifications_info"
        android:textStyle="italic"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"/>


    <!-- ................................................. -->


    <Switch
        android:id="@+id/_temperature_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_notifications_info"
        android:text="@string/temperature"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:switchPadding="20dp"
        android:trackTint="@android:color/white"/>

    <LinearLayout
        android:id="@+id/min_max_temperature_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/_temperature_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/temperature_min_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:hint="@string/min"
            android:textSize="16sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:text="5"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/from_to"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/temperature_max_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:hint="@string/max"
            android:textSize="16sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:text="15"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/degree_celsius"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>



    <Switch
        android:id="@+id/_pressure_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_max_temperature_layout"
        android:text="@string/pressure"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:switchPadding="20dp"
        android:trackTint="@android:color/white"/>

    <LinearLayout
        android:id="@+id/min_max_pressure_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/_pressure_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/pressure_min_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:hint="@string/min"
            android:textSize="16sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:text="985"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/from_to"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/pressure_max_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:hint="@string/max"
            android:textSize="16sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:text="1005"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/hPa"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>



    <Switch
        android:id="@+id/_humidity_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_max_pressure_layout"
        android:text="@string/humidity"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:switchPadding="20dp"
        android:trackTint="@android:color/white"/>

    <LinearLayout
        android:id="@+id/min_max_humidity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/_humidity_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/humidity_min_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:hint="@string/min"
            android:textSize="16sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:text="10"
            android:gravity="center"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/from_to"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/humidity_max_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:hint="@string/max"
            android:textSize="16sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:text="25"
            android:gravity="center"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/RH"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>



    <Switch
        android:id="@+id/co2_level_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_max_humidity_layout"
        android:text="@string/co2_level"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:switchPadding="20dp"
        android:trackTint="@android:color/white"/>

    <LinearLayout
        android:id="@+id/min_max_co2_level_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/co2_level_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/co2_level_min_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:hint="@string/min"
            android:textSize="16sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:text="10"
            android:gravity="center"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/from_to"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/co2_level_max_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:hint="@string/max"
            android:textSize="16sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:text="17"
            android:gravity="center"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/percent"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>



    <Switch
        android:id="@+id/illumination_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_max_co2_level_layout"
        android:text="@string/illumination"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:switchPadding="20dp"
        android:trackTint="@android:color/white"/>

    <LinearLayout
        android:id="@+id/min_max_illumination_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/illumination_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/illumination_min_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:hint="@string/min"
            android:textSize="16sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:text="50"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/from_to"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/illumination_max_value"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:hint="@string/max"
            android:textSize="16sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:text="168"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/lux"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
