<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AdjustVariable"
    tools:showIn="@layout/activity_adjust_variable">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/microelectronics"
        android:scaleType="centerCrop"
        android:foreground="@color/colorPrimaryTransparent"/>

    <TextView
        android:id="@+id/adjust_info_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/adjust_info_date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adjust_info_label"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/adjust_change_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adjust_info_date_label"
        android:text="@string/adjust_change"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/adjust_desired_value"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/adjust_change_label"
        app:layout_constraintBottom_toBottomOf="@+id/adjust_change_label"
        app:layout_constraintTop_toTopOf="@+id/adjust_change_label"/>

    <TextView
        android:id="@+id/adjust_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_celsius"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/adjust_desired_value"
        app:layout_constraintBottom_toBottomOf="@id/adjust_desired_value"
        app:layout_constraintTop_toTopOf="@id/adjust_desired_value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="."
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/adjust_unit"
        app:layout_constraintBottom_toBottomOf="@id/adjust_unit"
        app:layout_constraintTop_toTopOf="@id/adjust_unit"/>

    <Button
        android:id="@+id/button_adjust_variable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adjust_desired_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/adjust_variable"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:background="@drawable/rounded_button"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

</android.support.constraint.ConstraintLayout>
